# serializer version: 1
# name: test_r4_asmaddr2_bf16_srvw_golden
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_Bias_UserArgs_MT128x128x16PYF1vt7-50bRCUGmV7BzscGm2sgCuO-9irqQyQMvHZU=',
      'err': 0,
    }),
  ])
# ---
# name: test_r4_asmaddr2_fp32_golden
  list([
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT64x256x16_MI16x16xpKW8foDIk_LYCdksuqTK8vB_9UbEXjk1mx5qwhs25pU=',
      'err': 0,
    }),
  ])
# ---
